blocks/Epilogue.module.css
.container {
  padding-bottom: 140px !important;
}

.header {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  max-width: var(--page-responsive-desktop);
  margin: 0 auto;
  margin-top: 48px;
}

.title {
  color: var(--text);
  padding: 0.25rem;
  font-size: 4rem;
  font-weight: var(--h1-font-weight);
  line-height: var(--h1-line-height);
  letter-spacing: var(--h1-letter-spacing);
  text-align: center;
  overflow: hidden;
  background: linear-gradient(100deg, hsl(180, 100%, 50%), hsl(190, 100%, 65%), hsl(160, 100%, 65%));
  background-clip: text;
  -webkit-text-fill-color: transparent;
  /* stroke */
  -webkit-text-stroke: 1px var(--text-shade);
}

.subtitle, .subtitle1, .subtitle2 {
  font-size: var(--subtitle-font-size);
  font-weight: var(--subtitle-font-weight);
  line-height: var(--subtitle-line-height);
  letter-spacing: var(--subtitle-letter-spacing);
  text-align: center;
  color: var(--text-accent-shade);
}

.subtitle1 {
  color: var(--text);
}

.subtitle2 {
  color: var(--text-shade);
  font-size: medium;
}

.illustration {
  width: 100%;
  max-width: 320px;
  height: 240px;
  margin: 0 auto;
  background: var(--illustration);
  border-radius: 8px;;
}

